# openenv-hack

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_inference.py
server/: Dockerfile  __init__.py  app.py  datasets.py  ml_trainer_environment.py  models_nn.py  tasks.py  trainer.py
